--- a/package.json
+++ b/package.json
@@ -10,9 +10,19 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@umijs/hooks": "^1.9.3",
+    "antd": "^4.3.1",
+    "axios": "^0.19.2",
+    "firebase": "^7.15.1",
+    "firebaseui": "^4.5.1",
+    "lodash": "^4.17.15",
+    "rc-texty": "^0.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-google-login": "^5.1.20",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "recoil": "^0.0.10",
     "typescript": "~3.7.2"
   },
   "scripts": {
