--- a/.gitignore
+++ b/.gitignore
@@ -22,8 +22,9 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .firebaserc
-firebaseConfig.tsx
+# firebaseConfig.tsx
 /.firebase
 firebase-debug.log
 *.cache
 *.cache
+.firebase/hosting.YnVpbGQ.cache
