--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^7.15.1",
     "firebaseui": "^4.5.1",
     "lodash": "^4.17.15",
+    "rc-queue-anim": "^1.8.5",
     "rc-texty": "^0.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
